--- a/Ziplines/BascFrontEndProjects/2-RandomQuoteMachine/quote-jsonp.html
+++ b/Ziplines/BascFrontEndProjects/2-RandomQuoteMachine/quote-jsonp.html
@@ -3,16 +3,23 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/main-jsonp.css">
 <div class="container">
   <h1>Random Quote Here</h1>
   <p>Push the "Get Quote" button to see the new quote</p>
   <p>You can tweet this quote as well</p>
   <blockquote>
-    <p id="quote">Quote</p>
-    <footer id="author">Author</p>
+    <p id="quote"></p>
+    <footer id="author"></p>
    </blockquote>
   <button class="btn btn-success" onclick="getQuote()">Get Quote</button>
-  <a id="b" class="twitter-share-button" data-size="large" data-count="none"
-  href="https://twitter.com/intent/tweet">Tweet</a>
+  <a id="myTwi" class="btn btn-info" target="_blank"
+  href="https://twitter.com/intent/tweet"><i clas="fa fa-twitter"></i> Tweet</a>
 </div>
+<footer>
+  <div class="container">
+     <p><small>@ Copyright 2015, Aleksandr Sidorov, All rights reserved.</small></p>
+  </div>
+</footer>
 <script src="js/main-jsonp.js"></script>
