--- a/Ziplines/BascFrontEndProjects/4-PomodoroClock/index.html
+++ b/Ziplines/BascFrontEndProjects/4-PomodoroClock/index.html
@@ -5,14 +5,14 @@
 
 <div class="container">
   <div class="alarm-counter">
-    <button type="button" name="breakminus">-</button>
+    <button id="break-minus" type="button" name="breakminus">-</button>
     <span class="break-value"></span>
-    <button type="button" name="breakplus">+</button>
+    <button id="break-plus" type="button" name="breakplus">+</button>
   </div>
   <div class="alarm-counter">
-    <button type="button" name="sessionminus">-</button>
+    <button id="session-minus" type="button" name="sessionminus">-</button>
     <span class="session-value"></span>
-    <button type="button" name="sessionplus">+</button>
+    <button id="sessin-plus" type="button" name="sessionplus">+</button>
   </div>
 </div>
 
