Play and Pause icons are added

--- a/Ziplines/BascFrontEndProjects/4-PomodoroClock/index.html
+++ b/Ziplines/BascFrontEndProjects/4-PomodoroClock/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="css/master.css">
 <link href="https://fonts.googleapis.com/css?family=Pacifico">
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 <h1>Pomodoro Clock</h1>
 
@@ -22,8 +23,10 @@
 
 <div class="container">
   <div class="clock">
+    <i id="play-icon" class="fa fa-play"></i>
     <p class="period-name"></p>
     <span class="timer-value"></span>
+    <span class="clock-filler"></span>
   </div>
 </div>
 <button class="reset">Reset</button></br>
