Twitch API Main functions done
Need add Stream name and CSS

--- a/Ziplines/BascFrontEndProjects/5-TwitchtvAPI/index.html
+++ b/Ziplines/BascFrontEndProjects/5-TwitchtvAPI/index.html
@@ -1,1 +1,13 @@
 <!DOCTYPE html>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+<div class="menu">
+<button type="button" name="all" id="all">All</button>
+<button type="button" name="online" id="online">Online</button>
+<button type="button" name="offline" id="offline">Offline</button>
+</div>
+<input type="text" name="search" id="search">
+<ul class="ch-list">
+</ul>
+<script src="js/main.js"></script>
