--- a/Ziplines/BascFrontEndProjects/5-JavaScriptCalculator/index.html
+++ b/Ziplines/BascFrontEndProjects/5-JavaScriptCalculator/index.html
@@ -1,24 +1,34 @@
-<link href="css/main.css">
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<link href="css/main.css" rel='stylesheet'>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<div id="display"></div>
-<div id="current"></div>
-<button type="button" id="clear">C</button><br>
-<button type="button" class="digit">7</button>
-<button type="button" class="digit">8</button>
-<button type="button" class="digit">9</button>
-<button type="button" class="operator">/</button><br>
-<button type="button" class="digit">4</button>
-<button type="button" class="digit">5</button>
-<button type="button" class="digit">6</button>
-<button type="button" class="operator">*</button><br>
-<button type="button" class="digit">1</button>
-<button type="button" class="digit">2</button>
-<button type="button" class="digit">3</button>
-<button type="button" class="operator">-</button><br>
-<button type="button" id="plusminus">&plusmn;</button>
-<button type="button" class="digit">0</button>
-<button type="button" id="decimal">.</button>
-<button type="button" class="operator">+</button>
-<button type="button" id="eval">=</button>
+<div id="calculator">
+  <div id="screen">
+    <div id="hist"></div>
+    <div id="cur"></div>
+  </div>
+
+  <div id="keyboard">
+    <button type="button" id="clear-all">C</button>
+    <button type="button" id="clear-cur">CE</button>
+    <div id="fake"></div>
+    <button type="button" id="plusminus">&plusmn;</button>
+    <button type="button" class="digit">7</button>
+    <button type="button" class="digit">8</button>
+    <button type="button" class="digit">9</button>
+    <button type="button" class="operator">/</button>
+    <button type="button" class="digit">4</button>
+    <button type="button" class="digit">5</button>
+    <button type="button" class="digit">6</button>
+    <button type="button" class="operator">*</button>
+    <button type="button" class="digit">1</button>
+    <button type="button" class="digit">2</button>
+    <button type="button" class="digit">3</button>
+    <button type="button" class="operator">-</button>
+    <button type="button" id="decimal">.</button>
+    <button type="button" class="digit">0</button>
+    <button type="button" id="eval">=</button>
+    <button type="button" class="operator">+</button>
+  </div>
+</div>
 <script src="js/main.js"></script>
